# expense-manager

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml  example.env  example.tests.env  pyproject.toml
docker/: Dockerfile  tests.Dockerfile
src/common/: config.py  logger.py
src/delivery/telegram/: main.py
src/delivery/telegram/handlers/: start.py
src/domain/entities/: base.py  expense.py
src/domain/exceptions/: base.py  expense.py
src/infra/mongo/: config.py
src/infra/mongo/exceptions/: expense.py
src/infra/mongo/repositories/: expense.py
src/logic/repositories/: expense.py
src/logic/services/: expense.py
src/telegram/: aiogram_run.py  create_bot.py
src/telegram/handlers/: start.py
tests/: conftest.py
tests/domain/entities/: expense_tests.py
tests/infra/mongo/: repositories_tests.py
tests/logic/repositories/: test_expense_repository.py
