[project]
name = "expense-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan",email = "idev.wayawayg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.15.0"

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
    "*_tests.py",
]
python_functions = [
    "*_test",
    "test_*",
]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
