[project]
name = "expense-manager"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan",email = "idev.wayawayg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.11.5,<3.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.15.0"
pytest-asyncio = "^1.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
python_files = [
    "test_*.py",
    "*_test.py",
    "*_tests.py",
]
python_functions = [
    "*_test",
    "test_*",
]
pythonpath = [
    "src",
]
testpaths = [
    "tests",
]
